# abr-fresh

./: .dockerignore  .env.local  .gitignore  AGGRESSIVE_SEARCH_SOLUTIONS.md  AUDIBLE_SEARCH_BUG_ANALYSIS.md  CACHING_REFACTOR.md  CLAUDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  Dockerfile  FINAL_SEARCH_ANALYSIS.md  HYBRID_SEARCH_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_SEARCH_SUMMARY.md  LESS_ASIN_RELIANT.md  QUICK_REFERENCE.md  QUICK_START_TESTING.md  README.md  REDUCE_ASIN_DEPENDENCY_PLAN.md  SEARCH_FIX_SUMMARY.md  SEARCH_IMPROVEMENT_SUMMARY.md  TESTING_COMPLETE.txt  TEST_RESULTS.md  TEST_RESULTS_COMPREHENSIVE.md  WHY_AUDIBLE.md  app.db  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
alembic/: env.py
alembic/versions/: 9c87a9c6fe7d_add_isbn_and_source_fields.py  a1b2c3d4e5f6_add_uuid_column_to_audiobook.py  b2c3d4e5f6a1_update_audiobookrequest_to_use_uuid.py  c3d4e5f6a1b2_make_asin_nullable_and_unique.py  d0fac85afd0f_separate_cached_books_table.py
app/: main.py
app/internal/: book_search.py  cache_monitoring.py  db_queries.py  dtos.py  env_settings.py  google_books.py  models.py  notifications.py  query.py  repositories.py
app/internal/auth/: authentication.py  oidc_config.py  session_middleware.py
app/internal/indexers/: abstract.py  configuration.py  indexer_util.py  indexers.py  mam.py
app/internal/prowlarr/: prowlarr.py  source_metadata.py  util.py
app/internal/ranking/: download_ranking.py  quality.py  quality_extract.py
app/internal/sources/: __init__.py  google_books_api.py  isbn_utils.py  openlibrary_api.py  unified_search.py
app/routers/: auth.py  browse.py  root.py  search.py  wishlist.py
app/routers/api/: __init__.py  health.py  indexers.py  requests.py  search.py  users.py
app/routers/api/settings/: __init__.py  account.py  download.py  notifications.py  prowlarr.py  security.py
app/routers/settings/: account.py  download.py  indexers.py  notification.py  prowlarr.py  security.py  users.py
app/util/: audiobook_lookup.py  cache.py  connection.py  db.py  log.py  templates.py  toast.py
static/: .dockerignore  .gitignore  tw.css
templates/: search.html
templates/settings_page/: account.html  download.html
templates/wishlist_page/: wishlist.html
