[project]
name = "AudioBookRequest"
version = "1.8.0"
requires-python = ">= 3.12"
readme = "README.md"
# no explicit versioning unless required. the uv.lock file is for that
dependencies = [
    "aiohttp",
    "alembic",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "fastapi[standard]",
    "itsdangerous",
    "jinja2",
    "jinja2-fragments",
    "pydantic",
    "pydantic-settings",
    "pydantic-core",
    "pyjwt",
    "sqlmodel",
    "terminaltables",
    "torrent-parser",
    "typer",
    "urllib3",
    "rapidfuzz",
    "python-multipart",
    "requests",
    "structlog",
    "torf>=4.3.0",
    "markdown>=3.8.2",
    "apscheduler>=3.11.0",
    "psycopg2-binary>=2.9.10",
    "jinja2-htmlmin>=1.0.1",
]

# setuptools by default expects a "src" folder structure
[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = false

[tool.djlint]
profile = "jinja"
ignore = "H021"

[tool.pyrefly]
project-includes = ["app"]

[tool.pyrefly.errors]
deprecated = false

[dependency-groups]
dev = [
    "djlint",
    "pyrefly>=0.46.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
