[project]
name = "AudioBookRequest"
version = "1.8.0"
requires-python = ">= 3.12"
readme = "README.md"
# no explicit versioning unless required. the uv.lock file is for that
dependencies = [
    "aiohttp",
    "alembic",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "fastapi[standard]",
    "itsdangerous",
    "jinja2",
    "jinja2-fragments",
    "pydantic",
    "pydantic-settings",
    "pydantic-core",
    "pyjwt",
    "sqlmodel",
    "terminaltables",
    "torrent-parser",
    "typer",
    "urllib3",
    "rapidfuzz",
    "python-multipart",
    "requests",
    "structlog",
    "torf>=4.3.0",
    "markdown>=3.8.2",
    "apscheduler>=3.11.0",
    "psycopg2-binary>=2.9.10",
    "jinja2-htmlmin>=1.0.1",
    "cryptography>=46.0.3",
]

# setuptools by default expects a "src" folder structure
[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = false

[tool.djlint]
profile = "jinja"
ignore = "H021"

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["app"]
reportDeprecated = false
reportUnusedCallResult = false
allowedUntypedLibraries = ["apscheduler", "torrent_parser"]

[dependency-groups]
dev = ["basedpyright>=1.36.2", "djlint", "ruff>=0.14.10"]
